Update: add inventory app

--- a/angular2/inventory/index.html
+++ b/angular2/inventory/index.html
@@ -33,9 +33,9 @@
     </script>
 
     <div class="container">
-        <club>xx</club>
+        <inventory-app></inventory-app>
     </div>
-    
+
 </body>
 
 </html>
