Update: add style for selected product

--- a/angular2/inventory/index.html
+++ b/angular2/inventory/index.html
@@ -17,6 +17,12 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
+
+    <style>
+        .active {
+            border: 1px solid origin;
+        }
+    </style>
 </head>
 
 <body>
