Update: add new chapter: Application

--- a/angular2/inventory/index.html
+++ b/angular2/inventory/index.html
@@ -20,7 +20,7 @@
 
     <style>
         .active {
-            border: 1px solid origin;
+            outline: solid 1px #BE77FF;
         }
     </style>
 </head>
