Update: add build-in component

--- a/angular2/build-in/index.html
+++ b/angular2/build-in/index.html
@@ -17,6 +17,21 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
+
+    <style>
+        .bordered {
+            border: 1px dashed black;
+            background-color: #eee;
+        }
+        
+        .blue-text {
+            color: blue;
+        }
+        
+        .pink-background {
+            background-color: hotpink;
+        }
+    </style>
 </head>
 
 <body>
